--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -165,9 +165,9 @@ mingw32-make install
 
 1. 配置编译器Compilers
 
-右侧选择“添加->GCC->C++”，编译器路径即为gnu工具中的C++编译器aarch64-linux-gnu-g++所在路径，名称建议与我截图aarch64-linux-gnu-g++保持一致，ABI使用默认即可
+选择“添加->GCC->C++”，编译器路径即为gnu工具中的C++编译器aarch64-linux-gnu-g++所在路径，名称建议与我截图aarch64-linux-gnu-g++保持一致，ABI使用默认即可
 
-右侧选择“添加->GCC->C”，编译器路径即为gnu工具中的C编译器aarch64-linux-gnu-gcc所在路径，名称建议与我截图aarch64-linux-gnu-gcc保持一致，ABI使用默认即可
+选择“添加->GCC->C”，编译器路径即为gnu工具中的C编译器aarch64-linux-gnu-gcc所在路径，名称建议与我截图aarch64-linux-gnu-gcc保持一致，ABI使用默认即可
 
 ![image-20250306093823225](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306093823225.png)
 
@@ -195,6 +195,8 @@ mingw32-make install
 
 ## 案例测试
 
+### 新建工程
+
 ![image-20250306095105641](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095105641.png)
 
 ![image-20250306095230390](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095230390.png)
@@ -211,13 +213,15 @@ mingw32-make install
 
 ![image-20250306095752717](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095752717.png)
 
+### 编译
+
 ![image-20250306095859812](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095859812.png)
 
 编译通过
 
 ![image-20250306135646187](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306135646187.png)
 
-运行
+### 运行
 
 将编译生成的bin文件推送到板卡运行
 
