--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -156,6 +156,8 @@ mingw32-make install
 
 ![image-20250306092046919](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306092046919.png)
 
+### 配置QT Version
+
 1. 打开QT Creator，打开“工具->选项->Kits”
 2. 在“QT Version”栏点击添加，选择上方QT安装目录下的bin目录下的qmake.exe，点击右下角apply
 
@@ -163,7 +165,7 @@ mingw32-make install
 
 ![image-20250306092448631](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306092448631.png)
 
-1. 配置编译器Compilers
+### 配置编译器Compilers
 
 选择“添加->GCC->C++”，编译器路径即为gnu工具中的C++编译器aarch64-linux-gnu-g++所在路径，名称建议与我截图aarch64-linux-gnu-g++保持一致，ABI使用默认即可
 
@@ -175,19 +177,19 @@ mingw32-make install
 
 与我截图保持一致，点击右下角apply
 
-1. 配置Debuggers
+### 配置Debuggers
 
 在“Debuggers”点击右边Add添加，选择gnu工具下的aarch64-linux\bin路径下的aarch64-linux-gnu-gdb.exe，Name修改为aarch64-linux-gnu-gdb，点击右下角apply
 
 ![image-20250306094016745](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306094016745.png)
 
-1. 配置CMake
+### 配置CMake
 
 在“CMake”栏点击Add添加，选择步骤一中安装的QT的目录，找到之前重命名Tools\mingw730_64\bin\make.exe，参考下图，修改Name为MinGW，点击右下角apply
 
 ![image-20250306135029163](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306135029163.png)
 
-1. 添加Arm64的编译环境（构建套件Kits）
+### 配置Kits
 
 在“Kits”栏点击添加，所有需要操作的部分参考下图红圈部分
 
