--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -120,7 +120,7 @@ state use ActiveState-Perl-5.36.0
 
 ![image-20250305192832092](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305192832092.png)
 
-执行下面的语句，注意蓝色字体部分为安装路径，根据命令行提示，输入y完成配置
+执行下面的语句
 
 ``` shell
 .\configure.bat -release -opensource -prefix D:\Qt\CrossCompilation\Qt5.12.10-ARMv8 -nomake tests -nomake examples -no-opengl -skip qtvirtualkeyboard -platform win32-g++ -xplatform linux-aarch64-gnu-g++
@@ -130,13 +130,17 @@ state use ActiveState-Perl-5.36.0
 
 ![image-20250305193934069](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305193934069.png)
 
+接受开源协议
+
 ![image-20250305194131228](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305194131228.png)
 
 根据命令行提示，输入y完成配置
 
 根据硬件情况选择编译的核心数，比如8核心12线程（预计一小时左右），则建议
 
+``` cmd
 mingw32-make -j10
+```
 
 ![image-20250305194249489](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305194249489.png)
 
@@ -144,7 +148,7 @@ mingw32-make -j10
 
 ![image-20250306091059865](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306091059865.png)
 
-安装 大概10分钟
+安装大概10分钟
 
 ``` 
 mingw32-make install
