--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -189,7 +189,7 @@ mingw32-make install
 
 ### 配置CMake
 
-在“CMake”栏点击Add添加，选择步骤一中安装的QT的目录，找到之前重命名Tools\mingw730_64\bin\make.exe，参考下图，修改Name为MinGW，点击右下角apply
+在“CMake”栏点击Add添加，选择安装的QT目录，找到之前重命名的Tools\mingw730_64\bin\make.exe，参考下图，修改Name为MinGW，点击右下角apply
 
 ![image-20250306135029163](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306135029163.png)
 
