--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -207,6 +207,8 @@ mingw32-make install
 
 ![image-20250306095230390](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095230390.png)
 
+修改工程名和路径
+
 ![image-20250306095351963](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095351963.png)
 
 ![image-20250306095417246](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095417246.png)
