--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -217,6 +217,8 @@ mingw32-make install
 
 ![image-20250306095538732](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095538732.png)
 
+如图D:\Qt\CrossCompilation\Qt_demo\build-Kickpi_qt_demo-ARM_Linux-Release
+
 ![image-20250306095718648](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095718648.png)
 
 ![image-20250306095752717](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095752717.png)
