--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -217,7 +217,7 @@ mingw32-make install
 
 ![image-20250306095538732](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095538732.png)
 
-如图D:\Qt\CrossCompilation\Qt_demo\build-Kickpi_qt_demo-ARM_Linux-Release
+如图D:\Qt\CrossCompilation\Qt_demo\build-Kickpi_qt_demo-ARM_Linux-Release即为编译是生成可执行文件的目录
 
 ![image-20250306095718648](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250306095718648.png)
 
