--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -2,9 +2,7 @@
 
 Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
 
-下载QT开发环境相关软件包
-
-网盘这个目录下的都要下载
+下载QT开发环境相关软件包，网盘这个目录下的都要下载
 
 h618_data\3-SoftwareData软件资料\Qt_environment_installation
 
