--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -8,7 +8,7 @@ h618_data\3-SoftwareData软件资料\Qt_environment_installation
 
 ## 安装QT
 
-打开
+打开qt安装程序
 
 ![image-20250305160406754](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250305160406754.png)
 
