--- a/h618/zh/33-QT开发环境搭建.md
+++ b/h618/zh/33-QT开发环境搭建.md
@@ -1,6 +1,6 @@
 # QT开发环境搭建
 
-Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10库
+Windows10/11下交叉编译aarch64(ARMv8)架构Qt5.12.10
 
 下载QT开发环境相关软件包，网盘这个目录下的都要下载
 
