--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -233,6 +233,8 @@ $ ls /dev/ttyS*
 
 3. 使用 microcom 进行通信测试
 
+* Android默认安装有microcom 
+
 ```
 $ microcom -s 115200 /dev/ttyS4
 ```
@@ -241,7 +243,11 @@ $ microcom -s 115200 /dev/ttyS4
 >
 >-s 设置波特率为 115200
 
-4.使用minicom验证：
+4. 使用minicom验证：
+
+* Linux建议使用minicom 
+
+第一次安装需要配置一下 minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  然后选择Save setup as dfl保存退出
 
 接收的内容会打印出来，发送的内容无打印
 
@@ -256,8 +262,6 @@ $ microcom -s 115200 /dev/ttyS4
 > | Ctrl+A W | 启用/禁用自动换行，默认禁用     |
 > | Ctrl+A E | **启用/禁用输入显示**，默认禁用 |
 > | Ctrl+A C | 清屏                            |
-
-如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  然后保存退出
 
 或者使用echo直接发送
 
