--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -233,7 +233,7 @@ $ ls /dev/ttyS*
 
 3. 使用 microcom 进行通信测试
 
-* Android默认安装有microcom 
+> Android默认安装有microcom 
 
 ```
 $ microcom -s 115200 /dev/ttyS4
@@ -245,9 +245,14 @@ $ microcom -s 115200 /dev/ttyS4
 
 4. 使用minicom验证：
 
-* Linux建议使用minicom 
+> Linux建议使用minicom 
 
-第一次安装需要配置一下 minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  然后选择Save setup as dfl保存退出
+**第一次安装需要配置一下：** 
+
+* minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  
+
+* Esc按键或回车返回上一层选择Save setup as dfl保存
+*  Exit from Minicom 退出
 
 接收的内容会打印出来，发送的内容无打印
 
