--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -254,12 +254,14 @@ $ microcom -s 115200 /dev/ttyS4
 * Esc按键或回车返回上一层选择Save setup as dfl保存
 *  Exit from Minicom 退出
 
-接收的内容会打印出来，发送的内容无打印
+使用命令：
 
 ```shell
-# minicom -b 9600 -D /dev/ttyAS3
+# minicom -b 9600 -D /dev/ttyS3
 ```
 
+> 接收的内容会打印出来，发送的内容无打印
+>
 > crt+A 进入控制 B-Z命令  Z为help
 
 > | Ctrl+A X | 退出程序                        |
