--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -226,16 +226,17 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 2. 查看对应的节点是否存在
 
-```
+```shell
 $ ls /dev/ttyS*
-/dev/ttyS4
 ```
+
+> 例如 uart4 : /dev/ttyS4
 
 3. 使用 microcom 进行通信测试
 
 > Android默认安装有microcom 
 
-```
+```shell
 $ microcom -s 115200 /dev/ttyS4
 ```
 
@@ -260,7 +261,7 @@ $ microcom -s 115200 /dev/ttyS4
 # minicom -b 9600 -D /dev/ttyS3
 ```
 
-> 接收的内容会打印出来，发送的内容无打印
+> 默认显示：接收的内容会打印出来，发送的内容无打印
 >
 > crt+A 进入控制 B-Z命令  Z为help
 
