--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -230,7 +230,7 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 $ ls /dev/ttyS*
 ```
 
-> 例如 uart4 : /dev/ttyS4
+> 例如 uart4 对应 /dev/ttyS4
 
 3. 使用 microcom 进行通信测试
 
