--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -258,7 +258,7 @@ $ microcom -s 115200 /dev/ttyS4
 使用命令：
 
 ```shell
-# minicom -b 9600 -D /dev/ttyS3
+$ minicom -b 9600 -D /dev/ttyS3
 ```
 
 > 默认显示：接收的内容会打印出来，发送的内容无打印
@@ -274,9 +274,9 @@ $ microcom -s 115200 /dev/ttyS4
 或者使用echo直接发送
 
 ```shell
-# stty -F /dev/ttyAS3 -a 	//可以看默认波特率
-# stty -F /dev/ttyAS3 115200 	//可以设置
-# echo "123" > /dev/ttyAS3
+$ stty -F /dev/ttyAS3 -a 	//可以看默认波特率
+$ stty -F /dev/ttyAS3 115200 	//可以设置
+$ echo "123" > /dev/ttyAS3
 ```
 
 
