--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -118,7 +118,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 2. 开发板OTG接口 连接 电脑USB接口
 
-3. 保持长按 RECOVERY按键，并且连接DC电源供电接口进行上电操作(若已上电可按复位键进行复位操作)
+3. 保持长按 Loader按键，并且连接DC电源供电接口进行上电操作(若已上电可按复位键进行复位操作)
 
 4. 查看 镜像烧录工具 是否正常识别Loader设备/Maskrom设备
 
