--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -380,7 +380,15 @@ K1开发板 配备RTL8822CS高性能WIFI模块
 
 ![image-20240120091252595](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240120091252595.png)
 
+### 命令连接WIFI
 
+```
+$ sudo nmcli dev wifi connect "you_WIFI_name" password "WiFi_password" ifname wlan0
+```
+
+>you_WIFI_name : 你要连接的WiFi名称
+>
+>WiFi_password ：你要连接的WiFi密码
 
 ### 命令行配置WIFI热点（AP）模式
 
