--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -382,7 +382,7 @@ K1开发板 配备RTL8822CS高性能WIFI模块
 
 ### 命令连接WIFI
 
-```
+```shell
 $ sudo nmcli dev wifi connect "you_WIFI_name" password "WiFi_password" ifname wlan0
 ```
 
