--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -390,6 +390,21 @@ $ sudo nmcli dev wifi connect "you_WIFI_name" password "WiFi_password" ifname wl
 >
 >WiFi_password ：你要连接的WiFi密码
 
+* 连接后WiFi的信息在这个目录下：
+
+```shell
+$ ls /etc/NetworkManager/system-connections
+wifi_oranth_5G.nmconnection
+```
+
+* 取消对应WiFi自动连接，例如WiFi：wifi_oranth_5G
+
+```shell
+$ sudo rm -rf /etc/NetworkManager/system-connections/wifi_oranth_5G.nmconnection
+```
+
+
+
 ### 命令行配置WIFI热点（AP）模式
 
 **查看是否支持AP模式**
