--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -1,6 +1,6 @@
 # 41-RK3588 LCD配置
 
-RK3588 配备五路显示输出接口，分别为 HDMI、MIPI、LVDS、EDP，其中最高支持三路同时显示输出
+RK3588 配备五路显示输出接口，分别为 HDMI OUT0、HDMI OUT1、MIPI、DP，其中最高支持三路同时显示输出
 
 
 
