--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -1,14 +1,14 @@
 # 41-RK3588 LCD配置
 
-RK3588 配备五路显示输出接口，分别为 HDMI0、HDMI1、MIPI0、MIPI1、DP，其中最高支持三路同时显示输出
+RK3588 配备五路显示输出接口，分别为 HDMI0、HDMI1、MIPI0、MIPI1、DP，其中最高支持四路同时显示输出
 
 
 
 ## 1. 显示接口资源介绍
 
-### RK3568
+### RK3588
 
-RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
+RK3588 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
 
 | VP编号 | VP支持显示接口                    | VP最大分辨率   |
 | ------ | --------------------------------- | -------------- |
