--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -10,12 +10,12 @@ K8 RK3588 配备五路显示输出接口，分别为 HDMI0、HDMI1、MIPI0、MIP
 
 RK3588 有四个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
 
-| VP编号 | VP支持显示接口     | VP最大分辨率   |
-| ------ | ------------------ | -------------- |
-| VP0    | DP0 / eDP0 / HDMI0 | 4096x2304@60Hz |
-| VP1    | DP0 / eDP0 / HDMI0 | 2048x1536@60Hz |
-| VP2    | LVDS / RGB         | 1920x1080@60Hz |
-| VP3    |                    |                |
+| VP编号 | VP支持显示接口                     | VP最大分辨率   |
+| ------ | ---------------------------------- | -------------- |
+| VP0    | DP0 / eDP0 / HDMI0                 | 7680x4320@60Hz |
+| VP1    | DP0 / eDP0 / HDMI0                 | 4096x4320@60Hz |
+| VP2    | DP0 / eDP0 / HDMI0 / MIPI0 / MIPI1 | 4096x4320@60Hz |
+| VP3    | MIPI0 / MIPI1 / RGB                | 2048x1080@60Hz |
 
 > MIPI0与LVDS接口引脚冲突，只能二选一
 >
