--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -15,7 +15,7 @@ RK3588 有四个VP节点，每个VP节点可挂接一个显示屏，对应关系
 | VP0    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1                 | 7680x4320@60Hz |
 | VP1    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1                 | 4096x4320@60Hz |
 | VP2    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1 / MIPI0 / MIPI1 | 4096x4320@60Hz |
-| VP3    | MIPI0 / MIPI1                                           | 2048x1080@60Hz |
+| VP3    | MIPI0 / MIPI1 / BT1120 / BT656                          | 2048x1080@60Hz |
 
 > MIPI0与LVDS接口引脚冲突，只能二选一
 >
