--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -1,6 +1,6 @@
 # 41-RK3588 LCD配置
 
-K8 RK3588 配备五路显示输出接口，分别为 HDMI0、HDMI1、MIPI0、MIPI1、DP，其中最高支持四路同时显示输出
+RK3588 配备五路显示输出接口，分别为 HDMI0、HDMI1、MIPI0、MIPI1、DP，其中最高支持四路同时显示输出
 
 
 
