--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -19,20 +19,18 @@ RK3588 有四个VP节点，每个VP节点可挂接一个显示屏，对应关系
 | VP2    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1 / MIPI0 / MIPI1 | 4096x4320@60Hz |
 | VP3    | MIPI0 / MIPI1 / BT1120 / BT656                          | 2048x1080@60Hz |
 
-> MIPI0与LVDS接口引脚冲突，只能二选一
->
-> VP2节点仅支持LVDS/RGB，所以三屏显示时其中一路必须是LVDS（RGB接口未引出）
+> 
 
 
 
-| 显示接口  | 显示最大分辨率 | 格式             |
-| --------- | -------------- | ---------------- |
-| HDMI      | 4096x2160@60Hz | RGB/YUV420 10Bit |
-| MIPI      | 1920x1080@60Hz | RGB 8Bit         |
-| Dual MIPI | 2560x1440@60Hz | RGB 8Bit         |
-| LVDS      | 1280x800@60Hz  | RGB 8Bit         |
-| EDP       | 2560x1600@60Hz | RGB 10Bit        |
-| RGB       | 1920x1080@60Hz | RGB 8Bit         |
+| 显示接口              | 显示最大分辨率 | 格式             |
+| --------------------- | -------------- | ---------------- |
+| HDMI TX7680x4320@60Hz |                | RGB/YUV420 10Bit |
+| MIPI                  | 1920x1080@60Hz | RGB 8Bit         |
+| Dual MIPI             | 2560x1440@60Hz | RGB 8Bit         |
+| LVDS                  | 1280x800@60Hz  | RGB 8Bit         |
+| EDP                   | 2560x1600@60Hz | RGB 10Bit        |
+| RGB                   | 1920x1080@60Hz | RGB 8Bit         |
 
 
 
