--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -23,14 +23,14 @@ RK3588 有四个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-| 显示接口              | 显示最大分辨率 | 格式             |
-| --------------------- | -------------- | ---------------- |
-| HDMI TX7680x4320@60Hz |                | RGB/YUV420 10Bit |
-| MIPI                  | 1920x1080@60Hz | RGB 8Bit         |
-| Dual MIPI             | 2560x1440@60Hz | RGB 8Bit         |
-| LVDS                  | 1280x800@60Hz  | RGB 8Bit         |
-| EDP                   | 2560x1600@60Hz | RGB 10Bit        |
-| RGB                   | 1920x1080@60Hz | RGB 8Bit         |
+| 显示接口  | 显示最大分辨率 | 格式             |
+| --------- | -------------- | ---------------- |
+| HDMI TX   | 7680x4320@60Hz | RGB/YUV420 10Bit |
+| MIPI      | 1920x1080@60Hz | RGB 8Bit         |
+| Dual MIPI | 2560x1440@60Hz | RGB 8Bit         |
+| LVDS      | 1280x800@60Hz  | RGB 8Bit         |
+| EDP       | 2560x1600@60Hz | RGB 10Bit        |
+| RGB       | 1920x1080@60Hz | RGB 8Bit         |
 
 
 
