--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -21,13 +21,13 @@ RK3588 有四个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-| 显示接口 | 显示最大分辨率 | 格式                              |
-| -------- | -------------- | --------------------------------- |
-| HDMI TX  | 7680x4320@60Hz | RGB/YUV up to 10bit               |
-| eDP      | 4K@60Hz        | RGB/YCbCr 4:4:4/YCbCr 4:2:2 10Bit |
-| DP TX    | 7680x4320@60Hz | RGB/YUV up to 10bit               |
-| MIPI DSI | 4K@60Hz        | RGB up to 10bit                   |
-| BT.1120  | 1920x1080@60Hz | RGB up to 8bit                    |
+| 显示接口 | 显示最大分辨率 | 格式                                |
+| -------- | -------------- | ----------------------------------- |
+| HDMI TX  | 7680x4320@60Hz | RGB/YUV up to 10bit                 |
+| eDP      | 4K@60Hz        | RGB/YCbCr 4:4:4/YCbCr 4:2:2 8/10bit |
+| DP TX    | 7680x4320@60Hz | RGB/YUV up to 10bit                 |
+| MIPI DSI | 4K@60Hz        | RGB up to 10bit                     |
+| BT.1120  | 1920x1080@60Hz | RGB up to 8bit                      |
 
 
 
