--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -19,7 +19,7 @@ RK3588 有四个VP节点，每个VP节点同一时间可挂接一个显示屏，
 | VP2    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1 / MIPI0 / MIPI1 | 4096x4320@60Hz |
 | VP3    | MIPI0 / MIPI1 / BT1120 / BT656                          | 2048x1080@60Hz |
 
-
+显示接口规格如下表格
 
 | 显示接口 | 显示最大分辨率 | 格式                                |
 | -------- | -------------- | ----------------------------------- |
