--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -10,7 +10,7 @@ K8主板配备了五路显示输出接口，分别为 HDMI0 / HDMI1 / MIPI DSI0 
 
 ### RK3588
 
-RK3588 有四个VP节点，每个VP节点同一时间可挂接一个显示屏，对应关系如下表格示
+RK3588 有四个VP节点，每个VP节点同一时间可挂接一个显示屏，对应关系如下表格所示
 
 | VP编号 | VP支持显示接口                                          | VP最大分辨率   |
 | ------ | ------------------------------------------------------- | -------------- |
@@ -19,7 +19,7 @@ RK3588 有四个VP节点，每个VP节点同一时间可挂接一个显示屏，
 | VP2    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1 / MIPI0 / MIPI1 | 4096x4320@60Hz |
 | VP3    | MIPI0 / MIPI1 / BT1120 / BT656                          | 2048x1080@60Hz |
 
-显示接口规格如下表格
+RK3588 显示接口规格如下表格所示
 
 | 显示接口 | 显示最大分辨率 | 格式                                |
 | -------- | -------------- | ----------------------------------- |
