--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -40,11 +40,15 @@ $ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //linux
 $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //android
 
 // LCD
-#include "rk3568-kickpi-lcd-hdmi.dtsi"
-//#include "rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi"
-//#include "rk3568-kickpi-lcd-mipi0-10.1-800-1280.dtsi"
-//#include "rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi"
-//#include "rk3568-kickpi-lcd-lvds-7-1024-600.dtsi"
+//#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-AT101DS40I.dtsi"
+//#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-MX101BA1340.dtsi"
+//#include "rk3588-kickpi-lcd-mipi0-8-800-1280-MX080B2140.dtsi"
+#include "rk3588-kickpi-lcd-mipi0-5-720-1280-F050008M01.dtsi"
+
+//#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-AT101DS40I.dtsi"
+//#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-MX101BA1340.dtsi"
+//#include "rk3588-kickpi-lcd-mipi1-8-800-1280-MX080B2140.dtsi"
+//#include "rk3588-kickpi-lcd-mipi1-5-720-1280-F050008M01.dtsi"
 ```
 
 > 其中的rk3568-kickpi-lcd-hdmi.dtsi需要默认保持使能
