--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -33,23 +33,12 @@ RK3588 显示接口规格如下表格所示
 
 ## 2. 单显示屏驱动配置
 
-显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录如下：
+显示屏配置 主要修改设备树LCD配置文件，K8 RK3588 设备树LCD配置目录如下：
 
 ```
 $ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //linux
 $ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //android
-
-// LCD
-#include "rk3568-kickpi-lcd-hdmi.dtsi"
-//#include "rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi"
-//#include "rk3568-kickpi-lcd-mipi0-10.1-800-1280.dtsi"
-//#include "rk3568-kickpi-lcd-mipi1-10.1-800-1280.dtsi"
-//#include "rk3568-kickpi-lcd-lvds-7-1024-600.dtsi"
 ```
-
-> 其中的rk3568-kickpi-lcd-hdmi.dtsi需要默认保持使能
->
-> 若显示屏调试有问题，可联系售后，获取技术支持
 
 
 
