--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -49,7 +49,7 @@ RK3568 有两路MIPI LCD，分别为MIPI0、MIPI1，其中MIPI0与LVDS复用
 MIPI0接口
 
 ``` 
-$ cat rk3588-kickpi-k8.dtsi
+$ rk3588-kickpi-k8.dtsi
 //#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-AT101DS40I.dtsi"
 //#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-MX101BA1340.dtsi"
 //#include "rk3588-kickpi-lcd-mipi0-8-800-1280-MX080B2140.dtsi"
@@ -61,6 +61,7 @@ $ cat rk3588-kickpi-k8.dtsi
 MIPI1接口
 
 ```
+$ rk3588-kickpi-k8.dtsi
 //#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-AT101DS40I.dtsi"
 //#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-MX101BA1340.dtsi"
 //#include "rk3588-kickpi-lcd-mipi1-8-800-1280-MX080B2140.dtsi"
