--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -36,8 +36,8 @@ RK3588 显示接口规格如下表格所示
 显示屏配置 主要修改设备树LCD配置文件，K8 RK3588 设备树LCD配置目录如下：
 
 ```
-$ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //linux
-$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //android
+(SDK)$ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //linux
+(SDK)$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //android
 ```
 
 
