--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -31,7 +31,7 @@ RK3588 显示接口规格如下表格所示
 
 
 
-## 2. 单显示屏驱动配置
+## 2. 显示驱动配置
 
 显示屏配置 主要修改设备树LCD配置文件，K8 RK3588 设备树LCD配置目录如下：
 
@@ -49,7 +49,7 @@ RK3568 有两路MIPI LCD，分别为MIPI0、MIPI1，其中MIPI0与LVDS复用
 MIPI0接口
 
 ``` 
-$ rk3588-kickpi-k8.dtsi
+rk3588-kickpi-k8.dtsi
 //#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-AT101DS40I.dtsi"
 //#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-MX101BA1340.dtsi"
 //#include "rk3588-kickpi-lcd-mipi0-8-800-1280-MX080B2140.dtsi"
@@ -61,28 +61,12 @@ $ rk3588-kickpi-k8.dtsi
 MIPI1接口
 
 ```
-$ rk3588-kickpi-k8.dtsi
+rk3588-kickpi-k8.dtsi
 //#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-AT101DS40I.dtsi"
 //#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-MX101BA1340.dtsi"
 //#include "rk3588-kickpi-lcd-mipi1-8-800-1280-MX080B2140.dtsi"
 #include "rk3588-kickpi-lcd-mipi1-5-720-1280-F050008M01.dtsi"
 ```
-
-
-
-
-
-
-
-### LVDS
-
-LVDS接口 参考 rk3568-kickpi-lcd-lvds-7-1024-600.dtsi
-
-
-
-### EDP
-
-EDP接口 参考 rk3568-kickpi-lcd-edp-15.6-1920-1080.dtsi   
 
 
 
