--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -251,7 +251,7 @@ I2C + I2C
 
 禁止副屏触摸，不论external 或 internal类型设备，都作用在主屏
 
-```
+```diff
 $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
     // Determine whether the device is external or internal.
