--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -31,7 +31,7 @@ RK3588 显示接口规格如下表格所示
 
 
 
-## 2. 单显示屏驱动配置
+## 2. 显示屏驱动配置
 
 显示屏配置 主要修改设备树LCD配置文件，K8 RK3588 设备树LCD配置目录如下：
 
@@ -65,6 +65,15 @@ rk3588-kickpi-k8.dtsi
 //#include "rk3588-kickpi-lcd-mipi1-8-800-1280-MX080B2140.dtsi"
 #include "rk3588-kickpi-lcd-mipi1-5-720-1280-F050008M01.dtsi"
 ```
+
+
+
+### DP
+
+```
+```
+
+
 
 
 
