--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -44,7 +44,7 @@ RK3588 显示接口规格如下表格所示
 
 ### MIPI
 
-K8 有两路MIPI LCD，分别为MIPI0、MIPI1
+K8 有两路MIPI LCD，分别为MIPI DPHY0、MIPI1
 
 MIPI0接口
 
@@ -69,6 +69,8 @@ rk3588-kickpi-k8.dtsi
 
 
 ### DP
+
+K8 全功能TYPC-C接口，支持DP TX 1.4a 显示输出
 
 ```
 rk3588-kickpi-lcd-dp.dtsi
