--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -40,6 +40,13 @@ RK3588 显示接口规格如下表格所示
 (SDK)$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //android
 ```
 
+K8 LCD 配置文件
+
+```
+```
+
+
+
 ### MIPI
 
 K8 有两路MIPI LCD，dts命名为为MIPI0、MIPI1
