--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -40,9 +40,15 @@ RK3588 显示接口规格如下表格所示
 (SDK)$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //android
 ```
 
-K8 LCD 配置文件
+K8 LCD 配置文件路径
 
 ```
+(SDK)$ ls kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-*.dtsi
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-dp.dtsi
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi0-10.1-800-1280-AT101DS40I.dtsi
+...
+kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi1-10.1-800-1280-AT101DS40I.dtsi
+...
 ```
 
 
