--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -45,7 +45,9 @@ K8 RK3588 设备树配置目录如下：
 K8 LCD 配置文件路径
 
 ```
+(SDK)$ ls kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-*.dtsi
 (SDK)$ ls kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-*.dtsi
+
 kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-dp.dtsi
 kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi0-10.1-800-1280-AT101DS40I.dtsi
 ...
