--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -35,7 +35,7 @@ RK3588 显示接口规格如下表格所示
 
 主要修改设备树文件修改K8 显示屏配置，
 
-K8 RK3588 设备树配置目录如下：
+K8 设备树配置目录如下：
 
 ```
 (SDK)$ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //linux
