--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -38,8 +38,8 @@ RK3588 显示接口规格如下表格所示
 K8 设备树配置目录如下：
 
 ```
-(SDK)$ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //linux
-(SDK)$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi //android
+(linux SDK)$ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi
+(android SDK)$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi
 ```
 
 K8 LCD 配置文件路径
