--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -64,19 +64,19 @@ K8 有两路MIPI LCD，dts命名为为MIPI0、MIPI1
 MIPI0接口
 
 ``` 
-//#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-AT101DS40I.dtsi"
-//#include "rk3588-kickpi-lcd-mipi0-10.1-800-1280-MX101BA1340.dtsi"
-//#include "rk3588-kickpi-lcd-mipi0-8-800-1280-MX080B2140.dtsi"
-#include "rk3588-kickpi-lcd-mipi0-5-720-1280-F050008M01.dtsi"
+rk3588-kickpi-lcd-mipi0-10.1-800-1280-AT101DS40I.dtsi
+rk3588-kickpi-lcd-mipi0-10.1-800-1280-MX101BA1340.dtsi
+rk3588-kickpi-lcd-mipi0-8-800-1280-MX080B2140.dtsi
+rk3588-kickpi-lcd-mipi0-5-720-1280-F050008M01.dtsi
 ```
 
 MIPI1接口
 
 ```
-//#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-AT101DS40I.dtsi"
-//#include "rk3588-kickpi-lcd-mipi1-10.1-800-1280-MX101BA1340.dtsi"
-//#include "rk3588-kickpi-lcd-mipi1-8-800-1280-MX080B2140.dtsi"
-#include "rk3588-kickpi-lcd-mipi1-5-720-1280-F050008M01.dtsi"
+rk3588-kickpi-lcd-mipi1-10.1-800-1280-AT101DS40I.dtsi
+rk3588-kickpi-lcd-mipi1-10.1-800-1280-MX101BA1340.dtsi
+rk3588-kickpi-lcd-mipi1-8-800-1280-MX080B2140.dtsi
+rk3588-kickpi-lcd-mipi1-5-720-1280-F050008M01.dtsi
 ```
 
 ### DP
