--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -152,9 +152,11 @@ config TOUCHSCREEN_GT9XX
 obj-$(CONFIG_TOUCHSCREEN_GT9XX)		+= gt9xx/
 ```
 
-内核配置添加CONFIG_TOUCHSCREEN_GT9XX=y
+内核配置
 
-内核配置文件如arch/arm64/configs/rockchip_defconfig，不同版本的defconfig请自行在git历史记录中查找对应的版本文件
+```
+CONFIG_TOUCHSCREEN_GT9XX=y
+```
 
 
 
