--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -17,7 +17,7 @@ RK3588 有四个VP节点，每个VP节点同一时间可挂接一个显示屏，
 | VP0    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1                 | 7680x4320@60Hz |
 | VP1    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1                 | 4096x4320@60Hz |
 | VP2    | DP0 / DP1 / eDP0 / eDP1 / HDMI0 / HDMI1 / MIPI0 / MIPI1 | 4096x4320@60Hz |
-| VP3    | MIPI0 / MIPI1 / BT1120 / BT656                          | 2048x1080@60Hz |
+| VP3    | MIPI0 / MIPI1 / BT1120                                  | 2048x1080@60Hz |
 
 RK3588 显示接口规格如下表格所示
 
@@ -28,6 +28,15 @@ RK3588 显示接口规格如下表格所示
 | DP TX    | 7680x4320@60Hz | RGB/YUV up to 10bit                 |
 | MIPI DSI | 4K@60Hz        | RGB up to 10bit                     |
 | BT.1120  | 1920x1080@60Hz | RGB up to 8bit                      |
+
+K8 VP 配置表格
+
+| VP   | VP上接口                            |
+| ---- | ----------------------------------- |
+| VP0  | DP0 / HDMI0 / HDMI1                 |
+| VP1  | DP0 / HDMI0 / HDMI1                 |
+| VP2  | DP0 / HDMI0 / HDMI1 / MIPI0 / MIPI1 |
+| VP3  | MIPI0 / MIPI1                       |
 
 
 
