--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -38,9 +38,13 @@ K8 VP 配置表格
 | VP2  | DP0 / HDMI0 / HDMI1 / MIPI0 / MIPI1 |
 | VP3  | MIPI0 / MIPI1                       |
 
-> K8 配置4屏同显，
+> 每个VP节点同一时间可挂接一个显示屏
 >
-> hdmi0_in_vp0 + hdmi1_in_vp1 + dp0_in_vp2 + dsi1_in_vp3
+> K8 可配置4屏同显有类似参考：
+>
+> hdmi0_in_vp0 + hdmi1_in_vp1 + dp0_in_vp2 + dsi0_in_vp3
+>
+> hdmi0_in_vp0 + hdmi1_in_vp1 + dsi0_in_vp2 + dis1_in_vp3
 
 ## 2. 显示屏驱动配置
 
