--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -40,7 +40,9 @@ K8 VP 配置表格
 
 > 每个VP节点同一时间可挂接一个显示屏
 >
-> K8 可配置4屏同显有类似参考：
+> K8 可配置4屏同显有以下参考
+>
+> HDMI0+HDMI1+DP+MIPI0 四屏同显
 >
 > hdmi0_in_vp0 + hdmi1_in_vp1 + dp0_in_vp2 + dsi0_in_vp3
 >
