--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -38,7 +38,7 @@ K8 VP 配置表格
 | VP2  | DP0 / HDMI0 / HDMI1 / MIPI0 / MIPI1 |
 | VP3  | MIPI0 / MIPI1                       |
 
-> 每个VP节点同一时间可挂接一个显示屏
+> 
 >
 > K8 可配置4屏同显有以下参考
 >
@@ -46,7 +46,11 @@ K8 VP 配置表格
 >
 > hdmi0_in_vp0 + hdmi1_in_vp1 + dp0_in_vp2 + dsi0_in_vp3
 >
+> HDMI0+HDMI1+MIPI0+MIPI1四屏同显
+>
 > hdmi0_in_vp0 + hdmi1_in_vp1 + dsi0_in_vp2 + dis1_in_vp3
+>
+> 每个VP节点同一时间可挂接一个显示屏
 
 ## 2. 显示屏驱动配置
 
