--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -38,15 +38,13 @@ K8 VP 配置表格
 | VP2  | DP0 / HDMI0 / HDMI1 / MIPI0 / MIPI1 |
 | VP3  | MIPI0 / MIPI1                       |
 
-> 
+> K8 可配置4屏同显有以下参考：
 >
-> K8 可配置4屏同显有以下参考
->
-> HDMI0+HDMI1+DP+MIPI0 四屏同显
+> **HDMI0+HDMI1+DP+MIPI0 四屏同显**
 >
 > hdmi0_in_vp0 + hdmi1_in_vp1 + dp0_in_vp2 + dsi0_in_vp3
 >
-> HDMI0+HDMI1+MIPI0+MIPI1四屏同显
+> **HDMI0+HDMI1+MIPI0+MIPI1四屏同显**
 >
 > hdmi0_in_vp0 + hdmi1_in_vp1 + dsi0_in_vp2 + dis1_in_vp3
 >
