--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -48,7 +48,9 @@ K8 VP 配置表格
 >
 > hdmi0_in_vp0 + hdmi1_in_vp1 + dsi0_in_vp2 + dis1_in_vp3
 >
-> 每个VP节点同一时间可挂接一个显示屏
+> 每个VP节点同一时间可挂接一个显示屏，根据实际需求调整VP上挂载的显示
+
+
 
 ## 2. 显示屏驱动配置
 
