--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -82,6 +82,7 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi1-10.1-800-1280-A
 &route_hdmi0 {
 	connect = <&vp0_out_hdmi0>;
 	// connect = <&vp1_out_hdmi0>;
+	// connect = <&vp2_out_hdmi0>;
 }
 
 &hdmi0_in_vp0 {
