--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -78,6 +78,8 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi1-10.1-800-1280-A
 
 ### VP
 
+HDMI VP 配置
+
 ```
 &route_hdmi0 {
 	connect = <&vp0_out_hdmi0>;
