--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -78,7 +78,7 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi1-10.1-800-1280-A
 
 ### VP
 
-HDMI VP 配置
+HDMI0 VP 配置
 
 ```
 &route_hdmi0 {
@@ -103,6 +103,19 @@ HDMI VP 配置
 MIPI VP 配置
 
 ```
+&route_dsi1 {
+	status = "okay";
+	connect = <&vp3_out_dsi1>;
+};
+
+&dsi1_in_vp2 {
+	status = "disabled";
+};
+
+&dsi1_in_vp3 {
+	status = "okay";
+};
+
 ```
 
 
