--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -78,7 +78,7 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi1-10.1-800-1280-A
 
 ### VP
 
-HDMI0 VP 配置
+HDMI0 VP 配置，HDMI1 VP配置类似
 
 ```
 &route_hdmi0 {
@@ -100,7 +100,7 @@ HDMI0 VP 配置
 };
 ```
 
-MIPI VP 配置
+MIPI1 VP 配置
 
 ```
 &route_dsi1 {
