--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -106,6 +106,7 @@ MIPI1 VP 配置
 &route_dsi1 {
 	status = "okay";
 	connect = <&vp3_out_dsi1>;
+	// connect = <&vp2_out_dsi1>;
 };
 
 &dsi1_in_vp2 {
@@ -115,7 +116,6 @@ MIPI1 VP 配置
 &dsi1_in_vp3 {
 	status = "okay";
 };
-
 ```
 
 
