--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -100,7 +100,7 @@ HDMI0 VP 配置，HDMI1 VP配置类似
 };
 ```
 
-MIPI1 VP 配置
+MIPI1 VP 配置，MIPI0 VP配置类似
 
 ```
 &route_dsi1 {
@@ -117,8 +117,6 @@ MIPI1 VP 配置
 	status = "okay";
 };
 ```
-
-
 
 
 
