--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -121,6 +121,14 @@ MIPI1 VP 配置，MIPI0 VP配置类似
 DP VP配置
 
 ```
+&dp0_in_vp0 {
+	status = "ok";
+};
+
+&dp0_in_vp1 {
+	status = "ok";
+};
+
 &dp0_in_vp2 {
 	status = "ok";
 };
