--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -121,12 +121,16 @@ MIPI1 VP 配置，MIPI0 VP配置类似
 DP VP配置
 
 ```
+route_dp0 {
+
+};
+
 &dp0_in_vp0 {
-	status = "ok";
+	status = "disabled";
 };
 
 &dp0_in_vp1 {
-	status = "ok";
+	status = "disabled";
 };
 
 &dp0_in_vp2 {
