--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -122,7 +122,9 @@ DP VP配置
 
 ```
 route_dp0 {
-	connect = <&vp1_out_dp0>;
+	// 
+	// connect = <&vp1_out_dp0>;
+	connect = <&vp2_out_dp0>;
 };
 
 &dp0_in_vp0 {
