--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -105,8 +105,8 @@ MIPI1 VP 配置，MIPI0 VP配置类似
 ```
 &route_dsi1 {
 	status = "okay";
-	connect = <&vp3_out_dsi1>;
 	// connect = <&vp2_out_dsi1>;
+	connect = <&vp3_out_dsi1>;
 };
 
 &dsi1_in_vp2 {
@@ -118,11 +118,11 @@ MIPI1 VP 配置，MIPI0 VP配置类似
 };
 ```
 
-DP VP配置
+DP0 VP配置
 
 ```
 route_dp0 {
-	// 
+	// connect = <&vp0_out_dp0>;
 	// connect = <&vp1_out_dp0>;
 	connect = <&vp2_out_dp0>;
 };
