--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -78,7 +78,7 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi1-10.1-800-1280-A
 
 ### VP
 
-HDMI0 hdmi0_in_vp0 配置，HDMI1 VP配置类似
+HDMI0 hdmi0_in_vp0 配置
 
 ```
 &route_hdmi0 {
@@ -99,6 +99,8 @@ HDMI0 hdmi0_in_vp0 配置，HDMI1 VP配置类似
 	status = "disabled";
 };
 ```
+
+> HDMI1 VP配置类似
 
 MIPI1 VP 配置，MIPI0 VP配置类似
 
