--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -102,7 +102,7 @@ HDMI0 hdmi0_in_vp0 配置
 
 > HDMI1 VP配置类似
 
-MIPI1 VP 配置，MIPI0 VP配置类似
+MIPI1 dsi1_in_vp3 配置
 
 ```
 &route_dsi1 {
@@ -119,6 +119,8 @@ MIPI1 VP 配置，MIPI0 VP配置类似
 	status = "okay";
 };
 ```
+
+> MIPI0 VP配置类似
 
 DP0 VP配置
 
