--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -78,7 +78,7 @@ kernel-5.10/arch/arm64/boot/dts/rockchip/rk3588-kickpi-lcd-mipi1-10.1-800-1280-A
 
 ### VP
 
-HDMI0 hdmi0_in_vp0 配置
+* HDMI0 hdmi0_in_vp0 配置
 
 ```
 &route_hdmi0 {
@@ -102,7 +102,7 @@ HDMI0 hdmi0_in_vp0 配置
 
 > HDMI1 VP配置类似
 
-MIPI1 dsi1_in_vp3 配置
+* MIPI1 dsi1_in_vp3 配置
 
 ```
 &route_dsi1 {
@@ -122,7 +122,7 @@ MIPI1 dsi1_in_vp3 配置
 
 > MIPI0 VP配置类似
 
-DP0 VP配置
+* DP0 dp0_in_vp2 配置
 
 ```
 route_dp0 {
@@ -143,8 +143,6 @@ route_dp0 {
 	status = "ok";
 };
 ```
-
-
 
 ### MIPI
 
