--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -33,12 +33,12 @@ RK3588 显示接口规格如下表格所示
 
 K8 VP 配置表格
 
-| VP   | VP上接口                            |
-| ---- | ----------------------------------- |
-| VP0  | DP0 / HDMI0 / HDMI1                 |
-| VP1  | DP0 / HDMI0 / HDMI1                 |
-| VP2  | DP0 / HDMI0 / HDMI1 / MIPI0 / MIPI1 |
-| VP3  | MIPI0 / MIPI1                       |
+| VP   | VP支持接口                         |
+| ---- | ---------------------------------- |
+| VP0  | DP / HDMI0 / HDMI1                 |
+| VP1  | DP / HDMI0 / HDMI1                 |
+| VP2  | DP / HDMI0 / HDMI1 / MIPI0 / MIPI1 |
+| VP3  | MIPI0 / MIPI1                      |
 
 > K8 可配置4屏同显有以下参考：
 >
