--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -56,9 +56,7 @@ K8 VP 配置表格
 
 ## 2. 显示屏驱动配置
 
-通过修改设备树文件修改显示屏配置，
-
-K8 设备树配置目录如下：
+K8 设备树配置文件路径
 
 ```
 (linux SDK)$ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi
