--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -187,11 +187,7 @@ rk3588-kickpi-lcd-dp.dtsi
 ### 内核设备树配置
 
 ```
-$ vim kernel/arch/arm64/boot/dts/rockchip/rk3588-kickpi-k8.dtsi
-
-// Triple LCD
-//#include "rk3568-kickpi-triple-lcd-hdmi-mipi1-lvds.dtsi"
-//#include "rk3568-kickpi-triple-lcd-edp-mipi1-lvds.dtsi"
+rk3588-kickpi-lcd-dp.dtsi
 ```
 
 > 在完成单屏调试的基础上，参考以上提供的多屏设备树配置文件
