--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -186,14 +186,16 @@ rk3588-kickpi-lcd-dp.dtsi
 
 ### 内核设备树配置
 
+在完成单屏调试的基础上，参考提供的多屏设备树配置文件
+
 ```
 rk3588-kickpi-4lcd-hdmi0-hdmi1-dp-mipi0.dtsi
 rk3588-kickpi-4lcd-hdmi0-hdmi1-mipi0-mipi1.dtsi
 ```
 
-> 
+> 4 lcd-hdmi0-hdmi1-dp-mipi0
 >
-> 在完成单屏调试的基础上，参考以上提供的多屏设备树配置文件
+> 四屏显示 hdmi0 + hdmi1 + dp + mipi0
 
 
 
