--- a/rk356x/zh/41-RK3588 LCD配置.md
+++ b/rk356x/zh/41-RK3588 LCD配置.md
@@ -189,9 +189,7 @@ rk3588-kickpi-4lcd-hdmi0-hdmi1-dp-mipi0.dtsi
 rk3588-kickpi-4lcd-hdmi0-hdmi1-mipi0-mipi1.dtsi
 ```
 
-> 4lcd-hdmi0-hdmi1-dp-mipi0
->
-> 四屏显示 hdmi0 + hdmi1 + dp + mipi0
+> 4lcd-hdmi0-hdmi1-dp-mipi0 即四屏显示 hdmi0 + hdmi1 + dp + mipi0
 
 
 
