--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -152,6 +152,10 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 ### MIPI DSI
 
+软件默认支持 10寸屏 AT101DS40I
+
+排线连接处：蓝色朝上，白色面朝下，接入MIPI DSI 接口
+
 
 
 
