--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -154,11 +154,13 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 软件默认支持 10寸屏 AT101DS40I
 
+
+
 排线连接处：蓝色朝上，白色面朝下，接入MIPI DSI 接口
 
+![mipi0_01](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/mipi0_01.png)
 
-
-
+![mipi0_02](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/mipi0_02.png)
 
 ### HDMI TX 
 
