--- a/rk356x/zh/01-RK芯片对比介绍.md
+++ b/rk356x/zh/01-RK芯片对比介绍.md
@@ -1,66 +1,12 @@
-# 02-KICKPI-K1硬件介绍
+# 01-RK芯片对比介绍
 
+## RK3568对比RK3562
 
-
-## 1. 主控信息
-
-![rk3568基本信息](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3568bd.png)
-
-
-
-## 2. 开发板信息
-
-![image-20250222171126273](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250222171126273.png)
-
-
-
-## 3. 配件列表
-
-![img](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/O1CN01kcjuvi29djTNDfOhy_!!2216870748091.jpg)
-
-
-
-## 4. 网盘资料
-
-KICKPI 开发资料通过网盘方式推送，同时支持 百度网盘、OneDrive网盘
-
-两份网盘资料内容一致，可根据实际情况自行选择
-
-网盘链接可通过 购买平台或QQ 咨询客服获取
-
-
-
-* 网盘目录说明
-
-```
-├── 1-SDK软件源码
-│   ├── android13
-│   └── linux
-├── 2-Image镜像
-│   ├── RK3566-TX66
-│   │   ├── Android11-TV
-│   │   ├── Debian11
-│   │   └── Ubuntu2004
-│   ├── RK3568-K1
-│   │   ├── Android13.0
-│   │   ├── Debian11
-│   │   └── Ubuntu2204
-│   └── RK3568-K1B
-│       ├── Android13.0
-│       ├── Debian11
-│       └── Ubuntu2204
-├── 3-SoftwareData软件资料
-│   ├── rknn_toolkit
-│   └── RKNPU
-├── 4-HardwareData硬件资料
-│   ├── RK3568-K1
-│   └── RK3568-K1B
-├── 5-DevelopmentTools开发工具
-│   ├── ADB Tool
-│   ├── ADB投屏
-│   ├── FactoryTool 工厂镜像烧录工具
-│   ├── UART DebugTool 串口调试工具
-│   ├── USB Driver USB驱动
-│   └── USB ImageBurnTool 镜像烧录工具
-```
+|          | RK3562             | RK3568                                |             |
+| -------- | ------------------ | ------------------------------------- | ----------- |
+| CPU 架构 | 四核ARM Cortex-A53 | 四核ARM Cortex-A55                    | 差距20%左右 |
+| 主频     | 1.8GHZ             | 2.0GHZ                                |             |
+| GPU      | Mali-G52           | Mali-G52                              |             |
+| NPU算力  | 1TOPS              | 1TOPS                                 |             |
+| 内存支持 |                    | DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X |             |
 
