--- a/rk356x/zh/01-RK芯片对比介绍.md
+++ b/rk356x/zh/01-RK芯片对比介绍.md
@@ -2,11 +2,11 @@
 
 ## RK3568对比RK3562
 
-|          | RK3562             | RK3568                                |             |
-| -------- | ------------------ | ------------------------------------- | ----------- |
-| CPU 架构 | 四核ARM Cortex-A53 | 四核ARM Cortex-A55                    | 差距20%左右 |
-| 主频     | 1.8GHZ             | 2.0GHZ                                |             |
-| GPU      | Mali-G52           | Mali-G52                              |             |
-| NPU算力  | 1TOPS              | 1TOPS                                 |             |
-| 内存支持 |                    | DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X |             |
+|          | RK3562                         | RK3568                                |             |
+| -------- | ------------------------------ | ------------------------------------- | ----------- |
+| CPU 架构 | 四核ARM Cortex-A53             | 四核ARM Cortex-A55                    | 差距20%左右 |
+| 主频     | 1.8GHZ                         | 2.0GHZ                                |             |
+| GPU      | Mali-G52                       | Mali-G52                              |             |
+| NPU算力  | 1TOPS                          | 1TOPS                                 |             |
+| 内存支持 | DDR3/DDR3L/DDR4/LPDDR4/LPDDR4X | DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X |             |
 
