--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -152,9 +152,16 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 ### MIPI DSI
 
-软件默认支持 10寸屏 AT101DS40I
+软件默认适配 10寸屏 AT101DS40I
 
-软件还支持 
+K7 适配MIPI表格
+
+| MIPI Panel  | size |
+| ----------- | ---- |
+| AT101DS40I  | 10'  |
+| MX101BA1340 | 10'  |
+| MX080B2140  | 8'   |
+| F050008M01  | 5'   |
 
 排线连接处：蓝色朝上，白色面朝下，接入MIPI DSI 接口
 
