--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -156,6 +156,13 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 K7 适配MIPI表格
 
+| **Panel Model** | **Diagonal Size** | **Aspect Ratio** | **Resolution** | **Interface Type** |
+| --------------- | ----------------- | ---------------- | -------------- | ------------------ |
+| AT101DS40I      | 10.1-inch         | 16:10            | 1280×800       | MIPI DSI 2-lane    |
+| MX101BA1340     | 10.1-inch         | 16:10            | 1280×800       | MIPI DSI 2-lane    |
+| MX080B2140      | 8.0-inch          | 16:10            | 1280×800       | MIPI DSI 1-lane    |
+| F050008M01      | 5.0-inch          | 16:9             | 1280×720       | MIPI DSI 1-lane    |
+
 | MIPI Panel  | size |
 | ----------- | ---- |
 | AT101DS40I  | 10'  |
