--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -154,21 +154,14 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 软件默认适配 10寸屏 AT101DS40I
 
-K7 适配MIPI表格
+K7 已适配MIPI屏：
 
-| **Panel Model** | **Diagonal Size** | **Aspect Ratio** | **Resolution** | **Interface Type** |
-| --------------- | ----------------- | ---------------- | -------------- | ------------------ |
-| AT101DS40I      | 10.1-inch         | 16:10            | 1280×800       | MIPI DSI 2-lane    |
-| MX101BA1340     | 10.1-inch         | 16:10            | 1280×800       | MIPI DSI 2-lane    |
-| MX080B2140      | 8.0-inch          | 16:10            | 1280×800       | MIPI DSI 1-lane    |
-| F050008M01      | 5.0-inch          | 16:9             | 1280×720       | MIPI DSI 1-lane    |
-
-| MIPI Panel  | size |
-| ----------- | ---- |
-| AT101DS40I  | 10'  |
-| MX101BA1340 | 10'  |
-| MX080B2140  | 8'   |
-| F050008M01  | 5'   |
+| **Panel Model** | **Diagonal Size** | **Resolution** |
+| --------------- | ----------------- | -------------- |
+| AT101DS40I      | 10.1-inch         | 1280×800       |
+| MX101BA1340     | 10.1-inch         | 1280×800       |
+| MX080B2140      | 8.0-inch          | 1280×800       |
+| F050008M01      | 5.0-inch          | 1280×720       |
 
 排线连接处：蓝色朝上，白色面朝下，接入MIPI DSI 接口
 
