--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -163,11 +163,13 @@ K7 已适配MIPI屏：
 | MX080B2140      | 8.0-inch          | 1280×800       |
 | F050008M01      | 5.0-inch          | 1280×720       |
 
-排线连接处：蓝色朝上，白色面朝下，接入MIPI DSI 接口
+MIPI屏排线连接处：蓝色朝上，白色面朝下，接入MIPI DSI 接口
 
 ![mipi0_01](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/mipi0_01.png)
 
 ![mipi0_02](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/mipi0_02.png)
+
+
 
 ### HDMI TX 
 
@@ -176,6 +178,8 @@ Supports up to 4K@120Hz
 Output data format: RGB/YUV444/YUV422/YUV420 8/10-bit
 Supports CEC (Consumer Electronic Control) and ARC (Audio Return Channel)
 HDCP v2.3 and HDCP v1.4
+
+
 
 
 
