--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -179,7 +179,7 @@ Output data format: RGB/YUV444/YUV422/YUV420 8/10-bit
 Supports CEC (Consumer Electronic Control) and ARC (Audio Return Channel)
 HDCP v2.3 and HDCP v1.4
 
-
+![hdmi_01](D:\Desktop\project\picture\hdmi_01.png)
 
 
 
