--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -6,6 +6,8 @@
 
 ![K7_40pin](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K7_40pin.jpg)
 
+
+
 ## LED
 
 开发板配备2个LED，绿色LED为电源指示灯，上电默认长亮
@@ -38,7 +40,9 @@ $ echo heartbeat > /sys/class/leds/work/trigger
 
 ## GPIO
 
-首先，通过拓展引脚章节，确认GPIO的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
+软件默认
+
+首先，通过[拓展引脚章节](#ExpansionPin-K7)，确认GPIO的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
 
 **列举已经注册的GPIO控制节点**
 
