--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -40,9 +40,9 @@ $ echo heartbeat > /sys/class/leds/work/trigger
 
 ## GPIO
 
-软件默认
+软件默认配置拓展引脚GPIO口为输出口，可以控制GPIO输出高电平或低电平控制
 
-首先，通过[拓展引脚章节](#ExpansionPin-K7)，确认GPIO的引脚位置以及编号，参考以下步骤可对指定GPIO输出高电平或低电平控制
+首先，通过[拓展引脚章节](#ExpansionPin-K7)，确认GPIO的引脚位置以及编号，参考以下步骤可对指定GPIO
 
 **列举已经注册的GPIO控制节点**
 
