--- a/rk356x/zh/01-RK芯片对比介绍.md
+++ b/rk356x/zh/01-RK芯片对比介绍.md
@@ -11,5 +11,6 @@
 | 内存支持 | DDR3/DDR3L/DDR4/LPDDR4/LPDDR4X最高支持8G                     | DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X ，最高支持8G           |
 | 存储接口 | eMMC 5.1、SD3.0、Nor Flash                                   | eMMC 5.1、SD3.0、Nor Flash、LBA Nand Flash                   |
 | 显示接口 | MIPI DSI 、LVDS                                              | HDMI 2.0、MIPI DSI *2、LVDS                                  |
-| 接口支持 | 双网口(100M+1000M)、PCIe2.1、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、 | **双千兆网口**、**PCIe 3.0**、PCIe 2.1、**SATA 3.0**、USB 3.0、USB 2.0、 |
+| 接口支持 | 双网口(100M+1000M)、PCIe2.1、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM | **双千兆网口**、**PCIe 3.0**、PCIe 2.1、**SATA 3.0**、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM、CAN |
+| 图像处理 | 13M ISP 支持4K@30fps H.265解码和1080P@60fps H.264编码        | 8M ISP 支持4K@60fps H.265/H.264解码，编码能力为1080P@60fps   |
 
