--- a/rk356x/zh/01-RK芯片对比介绍.md
+++ b/rk356x/zh/01-RK芯片对比介绍.md
@@ -2,15 +2,17 @@
 
 ## RK3568对比RK3562
 
-|          | RK3562                                                       | RK3568                                                       |
-| -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| CPU 架构 | 四核ARM Cortex-A53                                           | 四核ARM Cortex-A55                                           |
-| 主频     | 1.8GHZ                                                       | 2.0GHZ                                                       |
-| GPU      | Mali-G52                                                     | Mali-G52                                                     |
-| NPU算力  | 1TOPS                                                        | 1TOPS                                                        |
-| 内存支持 | DDR3/DDR3L/DDR4/LPDDR4/LPDDR4X最高支持8G                     | DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X ，最高支持8G           |
-| 存储接口 | eMMC 5.1、SD3.0、Nor Flash                                   | eMMC 5.1、SD3.0、Nor Flash、LBA Nand Flash                   |
-| 显示接口 | MIPI DSI 、LVDS                                              | HDMI 2.0、MIPI DSI *2、LVDS                                  |
-| 接口支持 | 双网口(100M+1000M)、PCIe2.1、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM | **双千兆网口**、**PCIe 3.0**、PCIe 2.1、**SATA 3.0**、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM、CAN |
-| 图像处理 | 13M ISP 支持4K@30fps H.265解码和1080P@60fps H.264编码        | 8M ISP 支持4K@60fps H.265/H.264解码，编码能力为1080P@60fps   |
+|            |                            RK3562                            |                            RK3568                            |
+| :--------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+|  CPU 架构  |                      四核ARM Cortex-A53                      |                      四核ARM Cortex-A55                      |
+|    主频    |                            1.8GHZ                            |                            2.0GHZ                            |
+|    GPU     |                           Mali-G52                           |                           Mali-G52                           |
+|  NPU算力   |                            1TOPS                             |                            1TOPS                             |
+|  内存支持  |           DDR3/DDR3L/DDR4/LPDDR4/LPDDR4X最高支持8G           |      DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X ，最高支持8G      |
+|  存储接口  |                  eMMC 5.1、SD3.0、Nor Flash                  |          eMMC 5.1、SD3.0、Nor Flash、LBA Nand Flash          |
+|  显示接口  |                       MIPI DSI 、LVDS                        |                 HDMI 2.0、MIPI DSI *2、LVDS                  |
+|  接口支持  | 双网口(100M+1000M)、PCIe2.1、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM | **双千兆网口**、**PCIe 3.0**、PCIe 2.1、**SATA 3.0**、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM、CAN |
+| 摄像头接口 |                      MIPI CSI 4Lane *2                       |                        MIPI CSI 4Lane                        |
+|  图像处理  |    13M ISP 支持4K@30fps H.265解码和1080P@60fps H.264编码     |  8M ISP 支持4K@60fps H.265/H.264解码，编码能力为1080P@60fps  |
 
+> 总体RK3568比RK3562性能强20%左右，接口较丰富，RK3562更加低功耗、低成本。
