--- a/rk356x/zh/01-RK芯片对比介绍.md
+++ b/rk356x/zh/01-RK芯片对比介绍.md
@@ -4,11 +4,11 @@
 
 |            |                            RK3562                            |                            RK3568                            |
 | :--------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-|  CPU 架构  |                      四核ARM Cortex-A53                      |                      四核ARM Cortex-A55                      |
+|    CPU     |                      四核ARM Cortex-A53                      |                      四核ARM Cortex-A55                      |
 |    主频    |                            1.8GHZ                            |                            2.0GHZ                            |
 |    GPU     |                           Mali-G52                           |                           Mali-G52                           |
-|  NPU算力   |                            1TOPS                             |                            1TOPS                             |
-|  内存支持  |           DDR3/DDR3L/DDR4/LPDDR4/LPDDR4X最高支持8G           |      DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X ，最高支持8G      |
+|    NPU     |                            1TOPS                             |                            1TOPS                             |
+|  内存支持  |          DDR3/DDR3L/DDR4/LPDDR4/LPDDR4X 最高支持8G           |      DDR3/DDR3L/DDR4/LPDDR3/LPDDR4/LPDDR4X  最高支持8G       |
 |  存储接口  |                  eMMC 5.1、SD3.0、Nor Flash                  |          eMMC 5.1、SD3.0、Nor Flash、LBA Nand Flash          |
 |  显示接口  |                       MIPI DSI 、LVDS                        |                 HDMI 2.0、MIPI DSI *2、LVDS                  |
 |  接口支持  | 双网口(100M+1000M)、PCIe2.1、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM | **双千兆网口**、**PCIe 3.0**、PCIe 2.1、**SATA 3.0**、USB 3.0、USB 2.0、I2S、SDIO 3.0、UART、SPI、I2C、SPDIF、PWM、CAN |
