--- a/rk356x/zh/01-RK芯片对比介绍.md
+++ b/rk356x/zh/01-RK芯片对比介绍.md
@@ -1,6 +1,8 @@
 # 01-RK芯片对比介绍
 
-## RK3568对比RK3562
+
+
+## 1、RK3568对比RK3562
 
 |            |                            RK3562                            |                            RK3568                            |
 | :--------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
