--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -33,7 +33,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 
 
-## 2. 单显示屏驱动配置<a id='TouchDriver'> </a>
+## 2. 单显示屏驱动配置<a id='LCDDriver'> </a>
 
 显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录如下：
 
