--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -154,6 +154,8 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 #### 烧录分区镜像
 
+这种方式正常编译固件可以用这种方式调试，特殊固件则不行，网盘中的固件均为特殊固件。
+
 ![image-20230926170256112](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926170256112.png)
 
 操作步骤：
