--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -162,7 +162,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 1. 烧录工具 成功识别板卡设备（若识别不到，返回上一步确认操作）
 2. 进入分区镜像烧录页面
-3. 勾选烧录分区项(一定需要勾选Parameter)
+3. 勾选烧录分区项(其中Parameter一定需要勾选)
 4. 选择镜像路径
 5. 开始烧录镜像
 6. 查看 烧录日志，烧录成功后自动重启进入系统
